package com.example.detastructures;

public class HashSet<E> extends java.util.HashSet<E> {

}
