@startuml
class com.example.detastructures.ArrayList {
}
class com.example.Main {
- {static} int START_TIME
- {static} int END_TIME
- {static} int RECESS_START
- {static} int RECESS_END
- {static} Random random
- {static} Scanner scanner
+ {static} void main(String[])
- {static} void generateTimetableInteractive(UserInputHandler,TimetableGenerator,TimetablePrinter,TimetableFileHandler)
- {static} void generateTimetableFromFile(UserInputHandler,TimetableGenerator,TimetablePrinter,TimetableFileHandler)
- {static} void printExistingTimetable(UserInputHandler,TimetablePrinter,TimetableFileHandler)
- {static} void generateOrEditInputFile()
- {static} List<String> getSubjects()
- {static} Map<String,Integer> getDurations(List<String>)
- {static} Map<String,Integer> getSessionsPerWeek(List<String>)
- {static} Map<String,List<String>> getTeachers(List<String>)
- {static} List<String> getWeekDays()
- {static} List<Integer> generateDailySlots()
- {static} List<String> generateSlotLabels(List<Integer>)
- {static} Map<String,Map<String,Map<String,Map<String,String>>>> assignSubjectsWithTeachers(List<String>,Map<String,Integer>,Map<String,Integer>,Map<String,List<String>>,List<String>,int,List<Integer>)
- {static} void printTimetables(Map<String,Map<String,Map<String,Map<String,String>>>>,List<String>,List<String>,Map<String,Integer>)
- {static} void printTimeSlot(Map<String,String>,Map<String,Integer>)
- {static} void saveToJson(Map<String,Map<String,Map<String,Map<String,String>>>>,String,Map<String,Integer>)
}


class com.example.Main$SubjectSession {
~ String subject
~ int duration
~ String teacher
~ <<Create>> SubjectSession(String,int,String)
}


class com.example.SubjectSession {
- String subject
- int duration
- String teacher
+ <<Create>> SubjectSession(String,int,String)
+ String getSubject()
+ int getDuration()
+ String getTeacher()
}


class com.example.datastructures.ArrayList {
- Object[] elements
- int size
- {static} int DEFAULT_CAPACITY
+ <<Create>> ArrayList()
+ void add(T)
+ T get(int)
+ T remove(int)
+ int size()
+ String toString()
- void ensureCapacity()
- void checkIndex(int)
}


class com.example.TimetableFileHandler {
+ void saveToJson(Map<String,Map<String,Map<String,Map<String,String>>>>,String,Map<String,Integer>)
+ Map<String,Object> loadInputFile(String)
+ Map<String,Map<String,Map<String,Map<String,String>>>> loadTimetable(String)
}

class com.example.TimetablePrinter {
+ void printTimetables(Map<String,Map<String,Map<String,Map<String,String>>>>,List<String>,List<String>,Map<String,Integer>)
- void printTimeSlot(Map<String,String>,Map<String,Integer>)
}

class com.example.TimetableGenerator {
- {static} int START_TIME
- {static} int END_TIME
- {static} int RECESS_START
- {static} int RECESS_END
- Random random
+ <<Create>> TimetableGenerator()
+ List<Integer> generateDailySlots()
+ List<String> generateSlotLabels(List<Integer>)
+ Map<String,Map<String,Map<String,Map<String,String>>>> generateTimetable(List<String>,Map<String,Integer>,Map<String,Integer>,Map<String,List<String>>,List<String>,int)
}


class com.example.datastructures.HashMap {
- {static} int INITIAL_CAPACITY
- {static} float LOAD_FACTOR
- Entry<K,V>[] buckets
- int size
+ <<Create>> HashMap()
+ void put(K,V)
+ V get(K)
+ boolean containsKey(K)
+ V remove(K)
+ int size()
- int getIndex(K)
- void resize()
+ String toString()
}


class com.example.datastructures.HashMap$Entry {
~ K key
~ V value
~ Entry<K,V> next
~ <<Create>> Entry(K,V)
}


class com.example.UserInputHandler {
- Scanner scanner
+ <<Create>> UserInputHandler()
+ List<String> getSubjects()
+ Map<String,Integer> getDurations(List<String>)
+ Map<String,Integer> getSessionsPerWeek(List<String>)
+ Map<String,List<String>> getTeachers(List<String>)
+ List<String> getWeekDays()
+ void generateOrEditInputFile()
+ int getMenuChoice()
+ String getFilename(String)
+ int getNumberOfSections()
}


class com.example.detastructures.HashMap {
}
class com.example.datastructures.HashSet {
- {static} int INITIAL_CAPACITY
- {static} float LOAD_FACTOR
- LinkedList<T>[] buckets
- int size
+ <<Create>> HashSet()
+ boolean add(T)
+ boolean contains(T)
+ boolean remove(T)
+ int size()
- int getBucketIndex(T)
- void resize()
+ String toString()
}


class com.example.detastructures.HashSet {
}


com.example.detastructures.ArrayList <|-- com.example.detastructures.ArrayList
com.example.Main +.. com.example.Main$SubjectSession
com.example.datastructures.HashMap +.. com.example.datastructures.HashMap$Entry
com.example.detastructures.HashMap <|-- com.example.detastructures.HashMap
com.example.detastructures.HashSet <|-- com.example.detastructures.HashSet
@enduml